--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="file" id="fileInput" accept=".html">
+    <input type="file" id="fileInput" accept=".html, .htm">
     <button id="downloadButton" style="display: none;">Download HTML Page</button>
     <pre id="fileContent"></pre>
 
