--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -11,5 +13,8 @@
     <div id="controls" style="margin-top: 10px;"></div>
     <button id="downloadButton" style="display: none;">Download Modified HTML</button>
     <script src="script.js"></script>
+
+    <!-- alt kisim sonra silinebilir -->
+    <script src="index.js"></script>
 </body>
 </html>
